syntax = "proto3";

package vocalshaper.files.vsp3;

message Label {
  enum LabelType {
    LUA = 0;
    INI = 1;
    XML = 2;
    JSON = 3;
  }

  LabelType label_type = 1; //标签类型
  double position = 2;      //标签位置
  string data = 3;          //标签内容
}